--- a/pag1.html
+++ b/pag1.html
@@ -2,17 +2,39 @@
 <html>
 
 <head>
-    <title>CSS Testes</title>
+    <title>Breaking Bad News</title>
     <style type="text/css">
+        body {
+            background-color: green;
+        }
+
         h1 {
             text-align: center;
-            color: blueviolet;
+            color: rgb(0, 0, 0);
         }
     </style>
 
 </head>
-<h1>Olá a todos :)</h1>
 
+<h1>Breaking Bad News</h1>
+<hr>
+<center>
+    <img src="images/bryanwalterwhite.png" height="300px">
+</center>
+
+<p>
+        <h4>
+        Bryan Cranston é o ator que faz o papel de Walter White em Breaking, sendo assim o protagonista da narrativa da série. Walter White, um professor colegial de química de 50 anos começa a produzir secretamente metanfetamina para
+    proporcionar uma segurança à sua família após descobrir que sofre de um câncer terminal no pulmão. Ele se junta a
+    seu ex-aluno, Jesse Pinkman, que é vendedor da droga. Jesse tenta vender a droga por eles produzida, porém os
+    traficantes o forçam a mostrar seu laboratório, que é um velho trailer.Walter percebe que os traficantes pretendem
+    matá-lo e os envenena.
+        </h4>
+    
+
+
+</p>
+<hr>
 <body>
 
 </body>
