new video into file video

--- a/pag1.html
+++ b/pag1.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <meta charset="utf-8">
     <title>Breaking Bad News</title>
     <style type="text/css">
         body {
@@ -16,27 +17,40 @@
 
 </head>
 
-<h1>Breaking Bad News</h1>
-<hr>
-<center>
+<body>
+    <h1>Breaking Bad News</h1>
+    <hr>
+    <center>
     <img src="images/bryanwalterwhite.png" height="300px">
-</center>
+    </center>
 
-<p>
+        <p>
         <h4>
         Bryan Cranston é o ator que faz o papel de Walter White em Breaking, sendo assim o protagonista da narrativa da série. Walter White, um professor colegial de química de 50 anos começa a produzir secretamente metanfetamina para
-    proporcionar uma segurança à sua família após descobrir que sofre de um câncer terminal no pulmão. Ele se junta a
-    seu ex-aluno, Jesse Pinkman, que é vendedor da droga. Jesse tenta vender a droga por eles produzida, porém os
-    traficantes o forçam a mostrar seu laboratório, que é um velho trailer.Walter percebe que os traficantes pretendem
-    matá-lo e os envenena.
+        proporcionar uma segurança à sua família após descobrir que sofre de um câncer terminal no pulmão. Ele se junta a
+        seu ex-aluno, Jesse Pinkman, que é vendedor da droga. Jesse tenta vender a droga produzida por eles, porém os
+        traficantes o forçam a mostrar seu laboratório, que é um velho trailer.Walter percebe que os traficantes pretendem
+        matá-lo e os envenena.
         </h4>
-    
+       </p>
+        <hr>
 
 
-</p>
-<hr>
-<body>
+        <footer>
 
+            <nav>
+                <ul>
+                    <li><a href="pag1.html">Página 1</a></li>
+                    <li><a href="pag2.html">Página 2</a></li>
+
+                </ul>
+
+            </nav>
+
+            <p>Todos direitos reservados</p>
+
+        </footer>
+        
 </body>
 
 </html>
