modified pag1 and pag2

--- a/pag1.html
+++ b/pag1.html
@@ -4,25 +4,20 @@
 <head>
     <meta charset="utf-8">
     <title>Breaking Bad News</title>
-    <style type="text/css">
-        body {
-            background-color: green;
-        }
+    <!-- Inclui o arquivo CSS Externo -->
+    <link rel="stylesheet" href="css/estilo.css">
 
-        h1 {
-            text-align: center;
-            color: rgb(0, 0, 0);
-        }
-    </style>
 
 </head>
 
 <body>
     <h1>Breaking Bad News</h1>
+
     <hr>
-    <center>
-    <img src="images/bryanwalterwhite.png" height="300px">
-    </center>
+    <!-- Coloquei o nome de da classe walt para poder editar dentro do estilo.css -->
+    <div class="walt">
+        <img src="images/bryanwalterwhite.png" height="300px">
+    </div>
 
         <p>
         <h4>
@@ -35,19 +30,16 @@
        </p>
         <hr>
 
-
         <footer>
 
             <nav>
                 <ul>
                     <li><a href="pag1.html">Página 1</a></li>
-                    <li><a href="pag2.html">Página 2</a></li>
+                    <li><a href="pag2.html">Formulário</a></li>
 
                 </ul>
 
             </nav>
-
-            <p>Todos direitos reservados</p>
 
         </footer>
         
