new image and text

--- a/pag1.html
+++ b/pag1.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="utf-8">
     <title>Breaking Bad News</title>
+
     <!-- Inclui o arquivo CSS Externo -->
+
     <link rel="stylesheet" href="css/estilo.css">
 
 
@@ -15,34 +17,41 @@
 
     <hr>
     <!-- Coloquei o nome de da classe walt para poder editar dentro do estilo.css -->
+
     <div class="walt">
         <img src="images/bryanwalterwhite.png" height="300px">
     </div>
 
-        <p>
-        <h4>
-        Bryan Cranston é o ator que faz o papel de Walter White em Breaking, sendo assim o protagonista da narrativa da série. Walter White, um professor colegial de química de 50 anos começa a produzir secretamente metanfetamina para
-        proporcionar uma segurança à sua família após descobrir que sofre de um câncer terminal no pulmão. Ele se junta a
+    <p>
+    <h4>
+        Bryan Cranston é o ator que faz o papel de Walter White em Breaking, sendo assim o protagonista da narrativa da
+        série. Walter White, um professor colegial de química de 50 anos começa a produzir secretamente metanfetamina
+        para
+        proporcionar uma segurança à sua família após descobrir que sofre de um câncer terminal no pulmão. Ele se junta
+        a
         seu ex-aluno, Jesse Pinkman, que é vendedor da droga. Jesse tenta vender a droga produzida por eles, porém os
-        traficantes o forçam a mostrar seu laboratório, que é um velho trailer.Walter percebe que os traficantes pretendem
+        traficantes o forçam a mostrar seu laboratório, que é um velho trailer.Walter percebe que os traficantes
+        pretendem
         matá-lo e os envenena.
-        </h4>
-       </p>
-        <hr>
+    </h4>
+    </p>
 
-        <footer>
+    <hr>
 
-            <nav>
-                <ul>
-                    <li><a href="pag1.html">Página 1</a></li>
-                    <li><a href="pag2.html">Formulário</a></li>
+    <footer>
 
-                </ul>
+        <nav>
+            <ul>
+                <li><a href="pag1.html">Página 1</a></li>
+                <li><a href="pag2.html">Formulário</a></li>
+                <li><a href="pag3.html">Curiosidades BrBad</a></li>
 
-            </nav>
+            </ul>
 
-        </footer>
-        
+        </nav>
+
+    </footer>
+
 </body>
 
 </html>
