a lot of new images

--- a/pag1.html
+++ b/pag1.html
@@ -29,10 +29,9 @@
         para
         proporcionar uma segurança à sua família após descobrir que sofre de um câncer terminal no pulmão. Ele se junta
         a
-        seu ex-aluno, Jesse Pinkman, que é vendedor da droga. Jesse tenta vender a droga produzida por eles, porém os
-        traficantes o forçam a mostrar seu laboratório, que é um velho trailer.Walter percebe que os traficantes
-        pretendem
-        matá-lo e os envenena.
+        seu ex-aluno, Jesse Pinkman, que é vendedor da droga.A transição de White, do desesperado pai de família ao implacável e maquiavélico gângster do tráfico, sob o pseudônimo de Heisenberg, é a premissa de Breaking Bad.
+
+        
     </h4>
     </p>
 
