new pag and images

--- a/pag1.html
+++ b/pag1.html
@@ -24,8 +24,7 @@
 
     <p>
     <h4>
-        Bryan Cranston é o ator que faz o papel de Walter White em Breaking, sendo assim o protagonista da narrativa da
-        série. Walter White, um professor colegial de química de 50 anos começa a produzir secretamente metanfetamina
+        Walter White, um professor colegial de química de 50 anos começa a produzir secretamente metanfetamina
         para
         proporcionar uma segurança à sua família após descobrir que sofre de um câncer terminal no pulmão. Ele se junta
         a
@@ -44,6 +43,7 @@
                 <li><a href="pag1.html">Página 1</a></li>
                 <li><a href="pag2.html">Formulário</a></li>
                 <li><a href="pag3.html">Curiosidades BrBad</a></li>
+                <li><a href="pag4.html">Elenco BrBad</a></li>
 
             </ul>
 
