--- a/pag3.html
+++ b/pag3.html
@@ -99,6 +99,7 @@
                 <li><a href="pag1.html">Página 1</a></li>
                 <li><a href="pag2.html">Formulário</a></li>
                 <li><a href="pag3.html">Curiosidades BrBad</a></li>
+                <li><a href="pag4.html">Elenco BrBad</a></li>
             </ul>
 
         </nav>
