new images and pag5

--- a/pag4.html
+++ b/pag4.html
@@ -25,43 +25,43 @@
                 <td>Walter White</td>
             </tr>
             <tr>
-                <td>Anna Gunn</td>
+                <td><a href="images/AnnaGun.jpg" target="_blank">Anna Gunn</a></td>
                 <td>Skyler White</td>
             </tr>
             <tr>
-                <td>Aaron Paul</td>
+                <td><a href="images/Aaronpaul.jpg" target="_blank">Aaron Paul</a></td>
                 <td>Jesse Pinkman</td>
             </tr>
             <tr>
-                <td>Dean Norris</td>
+                <td><a href="images/DeanNorris.jpg" target="_blank">Dean Norris</a></td>
                 <td>Hank Schrader</td>
             </tr>
             <tr>
-                <td>Betsy Brandt</td>
+                <td><a href="images/BetsyBrandt.jpg" target="_blank">Betsy Brandt</a></td>
                 <td>Marie Schrader</td>
             </tr>
             <tr>
-                <td>RJ Mitte</td>
+                <td><a href="images/RJMitte.jpg" target="_blank">RJ Mitte</a></td>
                 <td>Walter White Junior</td>
             </tr>
             <tr>
-                <td>Jonathan Banks</td>
+                <td><a href="images/JonathanBanks.jpg" target="_blank">Jonathan Banks</a></td>
                 <td>Mike Ehrmantraut</td>
             </tr>
             <tr>
-                <td>Bob Odenkirk</td>
+                <td><a href="images/BobOdenkirk.jpg" target="_blank">Bob Odenkirk</a></td>
                 <td>Saul Goodman</td>
             </tr>
             <tr>
-                <td>Giancarlo Esposito</td>
+                <td><a href="images/GiancarloEsposito.jpg" target="_blank">Giancarlo Esposito</a></td>
                 <td>Gustavo "Gus" Fring</td>
             </tr>
             <tr>
-                <td>Jesse Plemons</td>
+                <td><a href="images/JessePlemons.jpg" target="_blank">Jesse Plemons</a></td>
                 <td>Todd Alquist</td>
             </tr>
             <tr>
-                <td>Laura Fraser</td>
+                <td><a href="images/laurafraser.jpg" target="_blank">Laura Fraser</a></td>
                 <td>Lydia Rodarte-Quayle</td>
             </tr>
         </tbody>
@@ -78,100 +78,102 @@
         </thead>
         <tbody>
             <tr>
-                <td>Steven Michael Quezada</td>
+                <td><a href="images/Stevenmichael.jpg" target="_blank">Steven Michael Quezada</a></td>
                 <td>Steven "Gomie" Gomez</td>
             </tr>
             <tr>
-                <td>Matt L. Jones</td>
+                <td><a href="images/MattL.Jones.jpg" target="_blank">Matt L. Jones</a></td>
                 <td>Brandon "Badger" Mayhew</td>
             </tr>
             <tr>
-                <td>Charles Baker</td>
+                <td><a href="images/charles-baker.jpg" target="_blank">Charles Baker</a></td>
                 <td>Skinny Pete</td>
             </tr>
             <tr>
-                <td>Rodney Rush</td>
+                <td><a href="images/Rodney_Rush.jpg" target="_blank">Rodney Rush</a></td>
                 <td>Christian "Combo" Ortega</td>
             </tr>
             <tr>
-                <td>Jessica Hecht</td>
+                <td><a href="images/JessicaHecht.jpg " target="_blank">Jessica Hecht</a></td>
                 <td>Gretchen</td>
             </tr>
             <tr>
-                <td>Adam Godley</td>
+                <td><a href="images/AdamGodley.jpg" target="_blank">Adam Godley</a></td>
                 <td>Elliot Schwartz</td>
             </tr>
             <tr>
-                <td>Raymond Cruz</td>
+                <td><a href="images/raymond-cruz.jpg" target="_blank">Raymond Cruz</a></td>
                 <td>Tuco Salamanca</td>
             </tr>
             <tr>
-                <td>Mark Margolis</td>
+                <td><a href="images/MarkMargolis.jpg" target="_blank">Mark Margolis</a></td>
                 <td>Hector Salamanca</td>
             </tr>
             <tr>
-                <td>Christopher Cousins</td>
+                <td><a href="images/christopher-cousins.jpg" target="_blank">Christopher Cousins</a></td>
                 <td>Ted Beneke</td>
             </tr>
             <tr>
-                <td>Krysten Ritter</td>
+                <td><a href="images/Krysten_Ritter.jpg" target="_blank">Krysten Ritter</a></td>
                 <td>Jane Margolis</td>
             </tr>
             <tr>
-                <td>John de Lancie</td>
+                <td><a href="images/john-de-lancie.jpg" target="_blank">John de Lancie</a></td>
                 <td>Donald Margolis</td>
             </tr>
             <tr>
-                <td>Danny Trejo</td>
+                <td><a href="images/Danny_Trejo.jpg" target="_blank">Danny Trejo</a></td>
                 <td>Tortuga</td>
             </tr>
             <tr>
-                <td>DJ Qualls</td>
+                <td><a href="images/DJQualls.jpg" target="_blank">DJ Qualls</a></td>
                 <td>Getz</td>
             </tr>
             <tr>
-                <td>Jeremiah Bitsui</td>
+                <td><a href="images/jeremiah-bitsui.jpg" target="_blank">Jeremiah Bitsui</a></td>
                 <td>Victor</td>
             </tr>
             <tr>
-                <td>David Costabile</td>
+                <td><a href="images/DavidCostabile.jpg" target="_blank">David Costabile</a></td>
                 <td>Gale Boetticher</td>
             </tr>
             <tr>
-                <td>Daniel Moncada</td>
+                <td><a href="images/Daniel-Moncada.jpg" target="_blank">Daniel Moncada</a></td>
                 <td>Leonel Salamanca</td>
             </tr>
             <tr>
-                <td>Luis Moncada</td>
+                <td><a href="images/luis-moncada.jpg" target="_blank">Luis Moncada</a></td>
                 <td>Marco Salamanca</td>
             </tr>
             <tr>
-                <td>Emily Rios</td>
+                <td><a href="images/EmilyRios.jpg" target="_blank">Emily Rios</a></td>
                 <td>Andrea Cantillo</td>
             </tr>
             <tr>
-                <td>Lavell Crawford</td>
+                <td><a href="images/lavell-crawford.jpg" target="_blank">Lavell Crawford</a></td>
                 <td>Huell Babineaux</td>
             </tr>
             <tr>
-                <td>Jim Beaver</td>
+                <td><a href="images/JimBeaver.jpg" target="_blank">Jim Beaver</a></td>
                 <td>Lawson</td>
             </tr>
             <tr>
-                <td>Steven Bauer</td>
+                <td><a href="images/StevenBauer.jpg" target="_blank">Steven Bauer</a></td>
                 <td>Don Eladio Vuente</td>
             </tr>
             <tr>
-                <td>Michael Bowen</td>
+                <td><a href="images/michael-bowen.jpg" target="_blank">Michael Bowen</a></td>
                 <td>Jack Welker</td>
             </tr>
             <tr>
-                <td>Robert Forster</td>
+                <td><a href="images/robert.jpg" target="_blank">Robert Forster</a></td>
                 <td>Ed</td>
             </tr>
 
         </tbody>
+
     </table>
+    <hr>
     <footer>
 
         <nav>
