modifed pag1 to pag5 and css file

--- a/pag1.html
+++ b/pag1.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Breaking Bad News</title>
+    <title>Redirecionamento de link</title>
 
     <!-- Inclui o arquivo CSS Externo -->
 
@@ -13,43 +13,26 @@
 </head>
 
 <body>
-    <h1>Breaking Bad News</h1>
-
     <hr>
-    <!-- Coloquei o nome de da classe walt para poder editar dentro do estilo.css -->
-
-    <div class="walt">
-        <img src="images/bryanwalterwhite.png" height="300px">
-    </div>
-
+    <h1>
+        <a href="pag1.html">Redirecionamento de Página</a> /
+        <a href="pag2.html">Formulário</a> /
+        <a href="pag3.html">Sinopse BrBad</a> /
+        <a href="pag4.html">Elenco BrBad</a> /
+        <a href="pag5.html">Curiosidades BrBad</a>
+    </h1>
+    <hr>
     <p>
-    <h4>
-        Walter White, um professor colegial de química de 50 anos começa a produzir secretamente metanfetamina
-        para
-        proporcionar uma segurança à sua família após descobrir que sofre de um câncer terminal no pulmão. Ele se junta
-        a
-        seu ex-aluno, Jesse Pinkman, que é vendedor da droga.A transição de White, do desesperado pai de família ao implacável e maquiavélico gângster do tráfico, sob o pseudônimo de Heisenberg, é a premissa de Breaking Bad.
+    <h1>
+        Bem vindo ao meu site sobre Breaking Bad, acima são os links para direcioná-lo para alguns assuntos sobre a
+        série.
+    </h1>
 
-        
-    </h4>
-    </p>
 
-    <hr>
-
-    <footer>
-
-        <nav>
-            <ul>
-                <li><a href="pag1.html">Página 1</a></li>
-                <li><a href="pag2.html">Formulário</a></li>
-                <li><a href="pag3.html">Curiosidades BrBad</a></li>
-                <li><a href="pag4.html">Elenco BrBad</a></li>
-
-            </ul>
-
-        </nav>
-
+    <footer id="main-footer">
+        <p>Copyright &copy;2021,Igor Ramires</p>
     </footer>
+
 
 </body>
 
