--- a/pag4.html
+++ b/pag4.html
@@ -178,11 +178,11 @@
 
         <nav>
             <ul>
-                <li><a href="pag1.html">Página 1</a></li>
+                <li><a href="pag1.html">Redirecionamento de Página</a></li>
                 <li><a href="pag2.html">Formulário</a></li>
-                <li><a href="pag3.html">Curiosidades BrBad</a></li>
+                <li><a href="pag3.html">Sinopse BrBad</a></li>
                 <li><a href="pag4.html">Elenco BrBad</a></li>
-
+                <li><a href="pag5.html">Curiosidades BrBad</a></li>
             </ul>
 
         </nav>
