--- a/pag1.html
+++ b/pag1.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=divice-width, initial-scale=1.0">
     <title>Redirecionamento de link</title>
 
     <!-- Inclui o arquivo CSS Externo -->
@@ -28,7 +29,14 @@
         série.
     </h1>
 
-
+    <div class="center">
+        <video width="320" height="240" controls>
+            <source src="video/BreakingBadWalt.mp4" type="video/mp4">
+        </video>
+    </div>
+    <p class="center">
+        <strong>"I was alive"</strong> <cite>~MR.Lambert</cite>
+    </p>
     <footer id="main-footer">
         <p>Copyright &copy;2021,Igor Ramires</p>
     </footer>
