--- a/pag3.html
+++ b/pag3.html
@@ -4,6 +4,7 @@
 <head>
 
     <meta charset="utf-8">
+    <meta name="viewport" content="width=divice-width, initial-scale=1.0">
     <title>Sinopse BrBad</title>
     <link rel="stylesheet" href="css/estilo.css">
 
