--- a/pag4.html
+++ b/pag4.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=divice-width, initial-scale=1.0">
     <title>Elenco BrBad</title>
     <link rel="stylesheet" href="css/estilo.css">
 
