new file file gif to pag1

--- a/pag1.html
+++ b/pag1.html
@@ -37,6 +37,20 @@
     <p class="center">
         <strong>"I was alive"</strong> <cite>~MR.Lambert</cite>
     </p>
+    <br>
+    <br>
+    <br>
+    <div class="center">
+        <img src="gif/yeahmrwhite.gif">
+        <audio controls>
+            <source src="audio/Yeah Science!.mp3">
+        </audio>
+    </div>
+    <br>
+    <br>
+    <br>
+    <hr>
+    
     <footer id="main-footer">
         <p>Copyright &copy;2021,Igor Ramires</p>
     </footer>
