new note in pag1

--- a/pag1.html
+++ b/pag1.html
@@ -29,6 +29,8 @@
         série.
     </h1>
 
+    <!-- Utilizei a class="center" para centralizar no meio, pelo CSS externo -->
+
     <div class="center">
         <video width="320" height="240" controls>
             <source src="video/BreakingBadWalt.mp4" type="video/mp4">
@@ -50,7 +52,7 @@
     <br>
     <br>
     <hr>
-    
+
     <footer id="main-footer">
         <p>Copyright &copy;2021,Igor Ramires</p>
     </footer>
