--- a/pag1.html
+++ b/pag1.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=divice-width, initial-scale=1.0">
     <title>Redirecionamento de link</title>
+    <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon" />
 
     <!-- Inclui o arquivo CSS Externo -->
 
