--- a/pag2.html
+++ b/pag2.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=divice-width, initial-scale=1.0">
     <title>Breaking Bad News</title>
+    <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="css/estilo.css">
 
 </head>
