--- a/pag1.html
+++ b/pag1.html
@@ -21,7 +21,8 @@
         <a href="pag2.html">Formulário</a> /
         <a href="pag3.html">Sinopse BrBad</a> /
         <a href="pag4.html">Elenco BrBad</a> /
-        <a href="pag5.html">Curiosidades BrBad</a>
+        <a href="pag5.html">Curiosidades BrBad</a> /
+        <a href="pag6.html">El Camino</a>
     </h1>
     <hr>
     <p>
