--- a/pag6.html
+++ b/pag6.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=divice-width, initial-scale=1.0">
-    <title></title>
+    <title>El camino</title>
     <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon" />
 
 
