new video and image to pag6

--- a/pag6.html
+++ b/pag6.html
@@ -6,13 +6,59 @@
     <meta name="viewport" content="width=divice-width, initial-scale=1.0">
     <title>El camino</title>
     <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="css/estilo.css">
 
 
 </head>
 
-
 <body>
+    <h1>
+        El Camino: A Breaking Bad Movie
+    </h1>
+    <hr>
 
+    <div class="margin">
+        <div class="center">
+
+            <video width="600" height="400" controls>
+                <source src="video/elcamino.mp4">
+            </video>
+            <br>
+        </div>
+        <p>
+        <h1>Sinopse</h1>
+        </p>
+        <div class="center">
+        <img src="images/elcaminojesse.jpg"> 
+        </div>
+        <p>
+            <h2>
+                Após fugir do cativeiro, onde foi mantido quando sequestrado, dramaticamente, Jesse Pinkman (Aaron Paul)
+                inicia uma jornada em busca da própria liberdade, mas antes precisa se reconciliar com o passado para, só
+                então, ter seu futuro garantido.
+            </h2>
+            </p>
+        <br>
+        <hr>
+
+        <footer>
+
+            <nav>
+                <ul>
+                    <li><a href="pag1.html">Redirecionamento de Página</a></li>
+                    <li><a href="pag2.html">Formulário</a></li>
+                    <li><a href="pag3.html">Sinopse BrBad</a></li>
+                    <li><a href="pag4.html">Elenco BrBad</a></li>
+                    <li><a href="pag5.html">Curiosidades BrBad</a></li>
+                    <li><a href="pag6.html">El Camino</a></li>
+                </ul>
+
+            </nav>
+
+        </footer>
+
+
+    </div>
 </body>
 
 </html>
