--- a/pag6.html
+++ b/pag6.html
@@ -13,7 +13,7 @@
 
 <body>
     <h1>
-        El Camino: A Breaking Bad Movie
+        El Camino: Filme baseado em Breaking Bad
     </h1>
     <hr>
 
@@ -40,7 +40,12 @@
             </p>
         <br>
         <hr>
-
+    <p>
+        <h1>
+            El Camino: Filme baseado em Breaking Bad teria 3 horas
+        </h1>
+    </p>    
+    <hr>    
         <footer>
 
             <nav>
