new table in pag7

--- a/pag1.html
+++ b/pag1.html
@@ -22,7 +22,8 @@
         <a href="pag3.html">Sinopse BrBad</a> /
         <a href="pag4.html">Elenco BrBad</a> /
         <a href="pag5.html">Curiosidades BrBad</a> /
-        <a href="pag6.html">El Camino</a>
+        <a href="pag6.html">El Camino</a> /
+        <a href="pag7.html">Elenco El Camino</a>
     </h1>
     <hr>
     <p>
