--- a/pag4.html
+++ b/pag4.html
@@ -186,6 +186,7 @@
                 <li><a href="pag4.html">Elenco BrBad</a></li>
                 <li><a href="pag5.html">Curiosidades BrBad</a></li>
                 <li><a href="pag6.html">El Camino</a></li>
+                <li><a href="pag7.html">Elenco El Camino</a></li>
             </ul>
 
         </nav>
