images and footer

--- a/pag7.html
+++ b/pag7.html
@@ -95,10 +95,6 @@
                 <td>Clarence</td>
             </tr>
 
-
-
-
-
         </tbody>
     </table>
     <hr>
@@ -106,6 +102,44 @@
         Produção
     </h1>
     <hr>
+    <table class="tabelaEditavel">
+
+        <tbody>
+            <tr>
+                <td>Produtora</td>
+                <td><a href="images/melissa-bernstein.jpg" target="_blank">Melissa Bernstein</a></td>
+            </tr>
+            <tr>
+                <td>Produtor</td>
+                <td><a href="images/vince-gilligan.jpg" target="_blank">Vince Gilligan</a></td>
+            </tr>
+            <tr>
+                <td>Produtor</td>
+                <td><a href="images/Mark_Johnson.jpg" target="_blank">Mark Johnson</a></td>
+            </tr>
+            <tr>
+                <td>Produtor</td>
+                <td><a href="images/Aaronpaul.jpg" target="_blank">Aaron Paul</a></td>
+            </tr>
+        </tbody>
+    </table>
+    <hr>
+    <footer>
+
+        <nav>
+            <ul>
+                <li><a href="pag1.html">Redirecionamento de Página</a></li>
+                <li><a href="pag2.html">Formulário</a></li>
+                <li><a href="pag3.html">Sinopse BrBad</a></li>
+                <li><a href="pag4.html">Elenco BrBad</a></li>
+                <li><a href="pag5.html">Curiosidades BrBad</a></li>
+                <li><a href="pag6.html">El Camino</a></li>
+                <li><a href="pag7.html">Elenco El Camino</a></li>
+            </ul>
+
+        </nav>
+
+    </footer>
 </body>
 
 </html>
