linked pag8 in all pages

--- a/pag1.html
+++ b/pag1.html
@@ -23,7 +23,8 @@
         <a href="pag4.html">Elenco BrBad</a> /
         <a href="pag5.html">Curiosidades BrBad</a> /
         <a href="pag6.html">El Camino</a> /
-        <a href="pag7.html">Elenco El Camino</a>
+        <a href="pag7.html">Elenco El Camino</a> /
+        <a href="pag8.html">Better Call Saul</a>
     </h1>
     <hr>
     <p>
