--- a/pag7.html
+++ b/pag7.html
@@ -135,6 +135,7 @@
                 <li><a href="pag5.html">Curiosidades BrBad</a></li>
                 <li><a href="pag6.html">El Camino</a></li>
                 <li><a href="pag7.html">Elenco El Camino</a></li>
+                <li><a href="pag8.html">Better Call Saul</a></li>
             </ul>
 
         </nav>
