--- a/pag2.html
+++ b/pag2.html
@@ -16,7 +16,8 @@
         <h1>Bem vindo ao formulário de Fãs de Breaking Bad</h1>
         <h2>Preencha o formulário abaixo para participar do nosso grupo de administração da página <a
                 href="https://www.facebook.com/BreakingBadCenas/" target="_blank">Fãs de Breaking Bad<a> no Facebook.
-        </h2><br />
+        </h2>
+        <br>
     </div>
 
     <form action="Script_do_Formulario.php" method="post">
@@ -69,7 +70,7 @@
             </table>
         </fieldset>
 
-        <br />
+        <br>
 
         <!-- ENDEREÇO -->
         <fieldset>
@@ -152,9 +153,10 @@
                     </td>
                 </tr>
             </table>
+            <input type="submit">
+            <input type="reset" value="Limpar">
         </fieldset>
-        <br />
-
+        <br>
         <footer>
 
             <nav>
