--- a/pag8.html
+++ b/pag8.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=divice-width, initial-scale=1.0">
-    <title></title>
-    <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon"/>
+    <title>Better Call Saul</title>
+    <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="css/estilo.css">
 
 
@@ -13,7 +13,19 @@
 
 
 <body>
-
+    <h1>
+        Better Call Saul
+    </h1>
+    <hr>
+    <p>
+    <h3>
+        Better Call Saul é um prólogo (ou prelúdio) a Breaking Bad, mas a série se passa em três épocas diferentes.
+        Apesar do nome da série, a primeira temporada não é sobre Saul Goodman, apesar de nos explicar todas as
+        circunstâncias que transformaram James McGill, ou Slippin' Jimmy, em Saul. A série começa com cenas do presente
+        pós-Breaking Bad, e também mostra a juventude de Jimmy. A maior parte das ações se passa durante o tempo em que
+        Saul tenta a sorte como advogado em Albuquerque, enquanto cuida de seu irmão Chuck.
+    </h3>
+    </p>
 </body>
 
 </html>
