--- a/pag1.html
+++ b/pag1.html
@@ -38,6 +38,7 @@
     <div class="center">
         <video width="320" height="240" controls>
             <source src="video/BreakingBadWalt.mp4" type="video/mp4">
+            Seu navegador não suporta este tipo de mídia. 
         </video>
     </div>
     <p class="center">
