--- a/pag1.html
+++ b/pag1.html
@@ -13,7 +13,6 @@
 
 
 </head>
-
 <body>
     <hr>
     <h1>
@@ -33,7 +32,7 @@
         série.
     </h1>
 
-    <!-- Utilizei a class="center" para centralizar no meio, pelo CSS externo -->
+    <!-- Utilizei a class="center" para centralizar no meio, pelo CSS externo. -->
 
     <div class="center">
         <video width="320" height="240" controls>
