--- a/pag1.html
+++ b/pag1.html
@@ -34,12 +34,12 @@
 
     <!-- Utilizei a class="center" para centralizar no meio, pelo CSS externo. -->
 
-    <div class="center">
+    <center>
         <video width="320" height="240" controls>
             <source src="video/BreakingBadWalt.mp4" type="video/mp4">
             Seu navegador não suporta este tipo de mídia. 
         </video>
-    </div>
+    </center>
     <p class="center">
         <strong>"I was alive"</strong> <cite>~MR.Lambert</cite>
     </p>
