estilizaçao do nav e o corpo

--- a/pag1.html
+++ b/pag1.html
@@ -10,27 +10,29 @@
     <!-- Inclui o arquivo CSS Externo -->
 
     <link rel="stylesheet" href="css/estilo.css">
-
-
 </head>
 <body>
-    <hr>
-    <h1>
-        <a href="pag1.html">Redirecionamento de Página</a> /
-        <a href="pag2.html">Formulário</a> /
-        <a href="pag3.html">Sinopse BrBad</a> /
-        <a href="pag4.html">Elenco BrBad</a> /
-        <a href="pag5.html">Curiosidades BrBad</a> /
-        <a href="pag6.html">El Camino</a> /
-        <a href="pag7.html">Elenco El Camino</a> /
-        <a href="pag8.html">Better Call Saul</a>
-    </h1>
-    <hr>
-    <p>
+  <main>
+    <nav>
+        <ul>
+
+            <li><a href="pag1.html">Redirecionamento de Página</a></li>
+            <li><a href="pag2.html">Formulário</a> </li>
+            <li><a href="pag3.html">Sinopse BrBad</a></li>
+            <li><a href="pag4.html">Elenco BrBad</a></li>
+            <li><a href="pag5.html">Curiosidades BrBad</li>
+            <li><a href="pag6.html">El Camino</a></li>
+            <li><a href="pag7.html">Elenco El Camino</a> </li>
+            <li><a href="pag8.html">Better Call Saul</a></li>
+
+        </ul>   
+    </nav>
+    <header>
     <h1>
         Bem vindo ao meu site sobre Breaking Bad, acima são os links para direcioná-lo para alguns assuntos sobre a
         série.
     </h1>
+    </header>
 
     <!-- Utilizei a class="center" para centralizar no meio, pelo CSS externo. -->
 
@@ -60,7 +62,7 @@
     <footer id="main-footer">
         <p>Copyright &copy;2021,Igor Ramires</p>
     </footer>
-
+  </main>
 
 </body>
 
