estilizaçao da pag2, e arrumando pag3 colocando margin, e um html semantico

--- a/pag3.html
+++ b/pag3.html
@@ -7,12 +7,25 @@
     <meta name="viewport" content="width=divice-width, initial-scale=1.0">
     <title>Sinopse BrBad</title>
     <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="css/estilo.css">
+    <link rel="stylesheet" href="css/pag3.css">
 
 </head>
 
 <body>
-    <div class="margin">
+    <main>
+        <nav>
+            <ul>
+                <li><a href="pag1.html">Redirecionamento de Página</a></li>
+                <li><a href="pag2.html">Formulário</a></li>
+                <li><a href="pag3.html">Sinopse BrBad</a></li>
+                <li><a href="pag4.html">Elenco BrBad</a></li>
+                <li><a href="pag5.html">Curiosidades BrBad</a></li>
+                <li><a href="pag6.html">El Camino</a></li>
+                <li><a href="pag7.html">Elenco El Camino</a></li>
+                <li><a href="pag8.html">Better Call Saul</a></li>
+            </ul>
+    
+        </nav>    
         <h1>Sinopse Breaking bad</h1>
         <hr>
         <h2>Primeira temporada (2008)</h2>
@@ -474,25 +487,6 @@
         </h3>
         </p>
         <hr>
-    </div>
+  </main> 
 </body>
-
-<footer>
-
-    <nav>
-        <ul>
-            <li><a href="pag1.html">Redirecionamento de Página</a></li>
-            <li><a href="pag2.html">Formulário</a></li>
-            <li><a href="pag3.html">Sinopse BrBad</a></li>
-            <li><a href="pag4.html">Elenco BrBad</a></li>
-            <li><a href="pag5.html">Curiosidades BrBad</a></li>
-            <li><a href="pag6.html">El Camino</a></li>
-            <li><a href="pag7.html">Elenco El Camino</a></li>
-            <li><a href="pag8.html">Better Call Saul</a></li>
-        </ul>
-
-    </nav>
-
-</footer>
-
 </html>
