--- a/pag2.html
+++ b/pag2.html
@@ -6,12 +6,26 @@
     <meta name="viewport" content="width=divice-width, initial-scale=1.0">
     <title>Breaking Bad News</title>
     <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="css/estilo.css">
+    <link rel="stylesheet" href="css/pag2.css">
 
 </head>
 
 
 <body>
+  <main>
+    <nav>
+        <ul>
+            <li><a href="pag1.html">Redirecionamento de Página</a></li>
+            <li><a href="pag2.html">Formulário</a></li>
+            <li><a href="pag3.html">Sinopse BrBad</a></li>
+            <li><a href="pag4.html">Elenco BrBad</a></li>
+            <li><a href="pag5.html">Curiosidades BrBad</a></li>
+            <li><a href="pag6.html">El Camino</a></li>
+            <li><a href="pag7.html">Elenco El Camino</a></li>
+            <li><a href="pag8.html">Better Call Saul</a></li>
+        </ul>
+    </nav>
+	<div class="medicao">
     <div class="walt">
         <h1>Bem vindo ao formulário de Fãs de Breaking Bad</h1>
         <h2>Preencha o formulário abaixo para participar do nosso grupo de administração da página <a
@@ -157,23 +171,8 @@
             <input type="reset" value="Limpar">
         </fieldset>
         <br>
-        <footer>
-
-            <nav>
-                <ul>
-                    <li><a href="pag1.html">Redirecionamento de Página</a></li>
-                    <li><a href="pag2.html">Formulário</a></li>
-                    <li><a href="pag3.html">Sinopse BrBad</a></li>
-                    <li><a href="pag4.html">Elenco BrBad</a></li>
-                    <li><a href="pag5.html">Curiosidades BrBad</a></li>
-                    <li><a href="pag6.html">El Camino</a></li>
-                    <li><a href="pag7.html">Elenco El Camino</a></li>
-                    <li><a href="pag8.html">Better Call Saul</a></li>
-                </ul>
-
-            </nav>
-
-        </footer>
+			</div>		
+  </main>
 </body>
 
 </html>
