--- a/pag3.html
+++ b/pag3.html
@@ -29,10 +29,11 @@
         	<h1>Sinopse Breaking bad</h1>
 				</header> 
         <hr>
+			<div class="text1">
 				</header> 
         	<h2>Primeira temporada (2008)</h2>
 				</header> 
-        <article>
+        <article >
 				 <p> Primeira temporada (2008)
             A primeira temporada foi originalmente destinada a ter nove episódios, mas devido a greve em 2007-2008 do
             Writers Guild of America apenas sete episódios foram filmados. A primeira temporada estreou em 20 de Janeiro
@@ -67,8 +68,10 @@
             A
             temporada se encerra em um ferro-velho (onde costumam fechar os negócios e fazerem as trocas), onde Tuco,
             descontrolado, espanca seu capanga No-Doze até a morte.</p>
-						<hr>
 				</article>
+			</div>	
+			<div class="text1">
+			<hr>
 				<header>
         <h2>Segunda temporada (2009)</h2>
 				</header>
@@ -159,6 +162,7 @@
 						</p>
            <hr>
 		  	</article>
+			<div class="text1">	
 				<header>
         	<h2>Terceira temporada (2010)</h2>
 				</header>
@@ -239,6 +243,8 @@
 						</p>
             <hr>
 			  	</article>
+				</div>
+			  <div class="text1">	
 				<header>
         <h2>Quarta temporada (2011)</h2>
 				</header>	
@@ -330,7 +336,9 @@
             esposa, "eu ganhei".
 						<p>
       		  <hr>
-					</article>	
+					</article>
+				 </div>
+				 <div class="text1">		
 					<header>
        			<h2>Quinta temporada (2012-13)</h2>
 					</header>
@@ -489,6 +497,7 @@
 						</p>
         			<hr>
 					</article>
+				</div>	
   </main> 
 </body>
 </html>
