--- a/pag6.html
+++ b/pag6.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=divice-width, initial-scale=1.0">
     <title>El camino</title>
     <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="css/estilo.css">
+    <link rel="stylesheet" href="css/pag1.css">
 
 
 </head>
