--- a/pag7.html
+++ b/pag7.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=divice-width, initial-scale=1.0">
     <title>Elenco El Camino</title>
     <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="css/estilo.css">
+    <link rel="stylesheet" href="css/pag1.css">
 </head>
 
 <body>
