change name of the image and added alt into some images

--- a/pag5.html
+++ b/pag5.html
@@ -61,7 +61,7 @@
                 </p>
 
                 <div class="center">
-                    <img src="images/waltandjesse.jpg" height="300px">
+                    <img src="images/waltandjesse.jpg" height="300px" alt="Jesse Pinkman e Walter White na montanha sentados juntos">
                 </div>
 
                 <p>
@@ -81,8 +81,8 @@
                 </p>
 
                 <div class="center">
-                    <img src="images/casaww.jpg" height="300px">
-                    <img src="images/francasa.jpg" height="300px">
+                    <img src="images/casa.jpg" height="300px" alt="Casa do casal Walter White e Skyler White">
+                    <img src="images/francasa.jpg" height="300px" alt="Casal que mora na vida real na casa da série">
                 </div>
 
                 <p>
@@ -98,7 +98,7 @@
                 </p>
 
                 <div class="center">
-                    <img src="images/tabelaquimica.png">
+                    <img src="images/tabelaquimica.png" alt="Elementos da tabela periótica">
                 </div>
 
                 <p>
@@ -109,7 +109,7 @@
                 </p>
 
                 <div class="center">
-                    <img src="images/imageplaca.png">
+                    <img src="images/imageplaca.png" alt="Placa do carro fazendo referência para o número de episodios e temporadas da série">
                 </div>
 
                 <p>
@@ -120,7 +120,7 @@
                 </p>
 
                 <div class="center">
-                    <img src="images/referenciavermelho.png">
+                    <img src="images/referenciavermelho.png" alt="Imagem destacando alguns objetos vermelhos com a referencia onde aos neonazistas">
                 </div>
                 <hr>
             </div>
