--- a/pag1.html
+++ b/pag1.html
@@ -36,7 +36,8 @@
 
         <!-- Utilizei a class="center" para centralizar no meio, pelo CSS externo. -->
         <center>
-            <video width="320" height="400" controls>
+            <video width="320" height="400" alt="Um breve video sobre Breaking Bad e de como é a trama da série"
+                controls title="Breve história de Walt">
                 <source src="video/BreakingBadWalt.mp4" type="video/mp4">
                 Seu navegador não suporta este tipo de mídia.
             </video>
@@ -48,7 +49,7 @@
         <br>
         <br>
         <div class="center">
-            <img src="gif/yeahmrwhite.gif">
+            <img src="gif/yeahmrwhite.gif" alt="Jesse Pinkman falando com Walt" title="Jesse Pinkman Yeah,Science">
             <audio controls>
                 <source src="audio/Yeah Science!.mp3">
             </audio>
